# web-scraper

./: README.md  pyproject.toml
web_scraper/: web_scraper.py
