[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Kyle Hoac <hoackyle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
